--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,249 +1,138 @@
 #summary ChangeLog of mailasend
-#labels Featured
 #sidebar Toc
 <wiki:toc />
 =1.17b9=
-  * There was a bug if multiple attachments are specified. The temp file was
-	created only once and was removed. The bug shows up in Windows.
-
+  * There was a bug if multiple attachments were specified. The temp file wasY'created only once and was removed. The bug shows up in Windows.'
   * The flag -l is changed to -list.
+  * A new flag -log is added for logging status messages to a file.Y'It is very alpha at the moment. Use -v to see anything useful.'
+_(Mar-06-2013)_
+=1.17b8=
+  * Pring more error messages.
+_(Mar-06-2013)_
+=1.17b7=
+  * Print some error message with errno.
+_(Mar-06-2013)_
+=1.17b6=
+  * MIME temp file was created on current working directory. Now go through someY'huristics to determine the path.'
+_(Mar-05-2013)_
+=1.17b5=
+  * getaddrinfo() was not found in ws2_32 dll in Windows 2000.Y'included  Wspiapi.h header in msock library as per Microsoft'Y'http://support.microsoft.com/kb/955045. Thanks to Bob R for reporting the'Y'issue. It is a Windows only change.'
+_(Feb-21-2013)_
+=1.17b4=
+  * Added flag -H "header" to add custom headers. For example:
+  *H "X-Priority: 1" -H "Importance: high". Requested by David Young.
+_(Feb-12-2013)_
+=1.17b3=
+  * Individual auth flags were not working.
+_(Jan-21-2013)_
+=1.17b2=
+  * IPv6 address was printed wrong.
+_(Aug-26-2012)_
+=1.17b1=
+  * IPv6 support for all platforms.
+_(Aug-25-2012)_
+  * Multiple one line message can be added with -M, for example:
+  *M "message line 1 " -M message line 2"
+_(Aug-26-2012)_
+  * First cut of debian package.
+  * After sending SMTP EOM, the status code was not checked. It is possibleY'that the server has rejected the mail due to message too large etc. Thanks'Y'to Peter Soppe for reporting it.'
+_(Aug-24-2012)_
+  * Do not enforce authentication just because server supports it.Y'Do it only if the user wants it.'
+_(Jun-29-2012)_
+  * Added flag -ct `<seconds>` for connect timeout with SMTP server. TheY'default default timeout is 5 seconds.'
+  * Exit with 0 if everything went well otherwise exit with 1 in caseY'of error.'
+  * created man page. Added install target to Makefile.
+_(July-05-2012)_
+=1.16=
+  * Added support for SMTP over SSL with -ssl. It is different thanY'STARTTLS in the sense that it is not part of SMTP protocol, the entire'Y'connection is encrypted from start to end. Note: No checking is'Y'performed on certificate. At this time, smtp.gmail.com does SMTP over'Y'SSL on port 465.'
+_(Feb-27-2012)_
+  * Cleaned up examples. Examples can be seen with -ex, before at least -exaY'was needed.'
+_(Feb-27-2012)_
+  * Created Makefile.nmake for MS Visual Studio 10.
+_(Feb-28-2012)_
+=1.15b5=
+  * New flag '-name "Your Name"' can be used to add your name in theY'From header, e.g. -f jdoe@example.com -name "John Doe" will create the'Y'From header as:'Y'From: John Doe `<jdoe@example.com>`'
+_(Apr-24-2007)_
+  * Changed >`>` to [C] and `<`< to [S] in debug output to represent Client andY'Server respectively.'
+_(Apr-25-2007)_
+  * The flags '-d domain' is not mandatory anymore. If not specifiedY'"localhost" will be used as domain in HELO or EHLO.'
+_(Apr-25-2007)_
+=1.15b4=
+  * When using -info and -smtp, message was wrong.
+  * Greetings can be multi line. Thanks to Keith B Smith.
+  * Some server don't say ESMTP in the greetings, but stillY'supports it. In that case force EHLO with -esmtp.'Y'Again Thanks to Keith B Smith.'
+  * The flag -ex is now -example.
+_(Mar-18-2007)_
+=1.15b3=
+  * Compiled on Windows with openssl 0.9.7l.
+  * If addresses are specified in a file with -l, do not ask for To. AddressesY'int he file not not validated howerver.'=1.15b2=
 
-  * A new flag -log is added for logging status messages to a file. 
-	It is very alpha at the moment. Use -v to see anything useful.
-	(Mar-06-2013)
+  * New flag -ex show examples.
+  * New flag -info to show SMTP server info.
+  * Few bug fixes
+_(Feb-18-2007)_
+=1.15a=
+  * Added support for AUTH CRAM-MD5, AUTH PLAIN and AUTH LOGINY'autentication.'Y'Feb-17-2007)'
+  * Added support for AUTH PLAIN
+_(Feb-11-2007)_
+  * The flag "-a" is changed to "-attach"
+_(Feb-11-2007)_
+  * The flags "-m" is gone. There is no need for it anymore,  asY'attachment type can be changed with i or a with the flag -a. If you'Y'want a "body" text, specify it with -a "file.txt,text/plain,i" as the'Y'first attachment.'
+_(Feb-11-2007)_
+  * STARTTLS support. If the SMTP server supports it, enable it in mailsendY'with flag "-starttls".'Y'Feb-11-2007)'
+_(Feb-11-2007)_
+=1.14=
+  * Content-disposition can be changed to attachment or inline.Y'Example: -a "file.gif,image/gif,i". The default is attachment.'
+  *a "file.gif,image.gif,a" is same as a "file.gif,image/gif"
+_(Feb-06-2007)_
+  * Bcc was broken
+_(Nov-03-2006)_
+=1.13=
+  * If no subject is specified with -sub, it'll be empty. BeforeY'the default subject was "hello!"'
+_(Jun-25-2006)_
+  * The flag -M was broken.  Thanks to Amnon S for reporting it.
+_(Jun-25-2006)_
+  * For text attachments, Content-Disposition was always inline. Now it'llY'be attachment.  Thanks to Danny Casier.'Y'May-21-2006)'=1.12=
 
-{{{
-1.17b8
-	- Pring more error messages.
-	(Mar-06-2013)
-1.17b7
-	- Print some error message with errno.
-	(Mar-06-2013)
+  * mailsend was not adding Date header. Some SMTP servers does not add itY'either. Now by default it'll add the Date header (make sure your clock'Y'is set properly). If you don't want mailsend to add Date header, use the'Y'flag +D. Thanks to Mr S J Hannan for the bug report.'
+_(May-20-2006)_
+=1.11=
+  * Attachment seperator character is changed to a , from :. Because inY'Windows drive is specified with :. Thanks to Jeppe Teglgaard Mohr for'Y'pointing it out. Example:  -a "c:\file.gif,image/gif"'
+_(Apr-23-2006)_
+  * The flag -m is back. This option can be used to attach a text or htmlY'file as a blody (inline). Example: -m "file.html,text/html". It is the'Y'caller's responsibily to make sure file type is correct. mailsend will'Y'not verify if the file is binary or text.'
+_(Apr-23-2006)_
+  * New flag -rrr to request read receipts. Suggested by marc hubaut.
+_(May-14-2006)_
+  * New flag -rt to add Reply-To header.
+_(May-14-2006)_
+=1.10=
+  * If the attachment type was text/plain, `<CR>``<LF>` was not added afterY'Content-Disposition line which caused attachment to be ignored by'Y'some mail readers.'Y'Thanks to Andrés Ghigliazza for pointing it out.'
+_(Apr-02-2006)_
+  * added a new flag -cs to specify the character set for text/plainY'attachment. The default is us-ascii. But if you need some other'Y'type e.g. "ISO-8859-1", you can use this flag.'Y'Thanks to Andrés Ghigliazza for the suggestion.'
+_(Apr-02-2006)_
+  * For Cc or Bcc the flags must be at least -cc and -bc
+_(Apr-02-2006)_
+=1.09=
+  * new flag -w to wait for Carriage Return after sending the mail.
+_(Mar-29-2006)_
+=1.08=
+  * remove mailto: from To field. Now the program can be usedY'(if configured) as the external mailsender from web browsers'Y'when clicked on the mailto link.'Y'(Mar-26-2006);'=1.07=
 
-1.17b6
-	- MIME temp file was created on current working directory. Now go through some
-	huristics to determine the path.
-	(Mar-05-2013)
-1.17b5
-	- getaddrinfo() was not found in ws2_32 dll in Windows 2000.
-	included  Wspiapi.h header in msock library as per Microsoft
-	http://support.microsoft.com/kb/955045. Thanks to Bob R for reporting the
-	issue. It's a Windows only change.
-	(Feb-21-2013)
-
-1.17b4
-	- Added flag -H "header" to add custom headers. For example: 
-	-H "X-Priority: 1" -H "Importance: high". Requested by David Young.
-	(Feb-12-2013)
-
-1.17b3
-	- Individual auth flags were not working.
-	(Jan-21-2013)
-
-1.17b2
-	- IPv6 address was printed wrong.
-	(Aug-26-2012)
-
-1.17b1
-	- IPv6 support for all platforms.
-	(Aug-25-2012)
-
-	- Multiple one line message can be added with -M, for example:
-	 -M "message line 1 " -M message line 2"
-	(Aug-26-2012)
-
-	- First cut of debian package.
-
-	- After sending SMTP EOM, the status code was not checked. It is possible
-	that the server has rejected the mail due to message too large etc. Thanks
-	to Peter Soppe for reporting it.
-	(Aug-24-2012)
-
-	- Do not enforce authentication just because server supports it.
-	Do it only if the user wants it.
-	(Jun-29-2012)
-
-	- Added flag -ct <seconds> for connect timeout with SMTP server. The 
-	default default timeout is 5 seconds.
-	- Exit with 0 if everything went well otherwise exit with 1 in case 
-	of error.
-	- created man page. Added install target to Makefile.
-	(July-05-2012)
-
-1.16
-	- Added support for SMTP over SSL with -ssl. It is different than 
-	STARTTLS in the sense that it is not part of SMTP protocol, the entire 
-	connection is encrypted from start to end. Note: No checking is 
-	performed on certificate. At this time, smtp.gmail.com does SMTP over 
-	SSL on port 465.
-	(Feb-27-2012)
-
-	- Cleaned up examples. Examples can be seen with -ex, before at least -exa
-	was needed. 
-	(Feb-27-2012)
-
-	- Created Makefile.nmake for MS Visual Studio 10.
-	(Feb-28-2012)
-
-1.15b5
-	- New flag '-name "Your Name"' can be used to add your name in the
-	From header, e.g. -f jdoe@example.com -name "John Doe" will create the
-	From header as:
-		From: John Doe <jdoe@example.com>
-	(Apr-24-2007)
-
-	- Changed >> to [C] and << to [S] in debug output to represent Client and
-	Server respectively.
-	(Apr-25-2007)
-
-	- The flags '-d domain' is not mandatory anymore. If not specified
-	"localhost" will be used as domain in HELO or EHLO.
-	(Apr-25-2007)
-
-1.15b4
-    - When using -info and -smtp, message was wrong.
-    - Greetings can be multi line. Thanks to Keith B Smith.
-    - Some server don't say ESMTP in the greetings, but still
-    supports it. In that case force EHLO with -esmtp.
-    Again Thanks to Keith B Smith.
-    - The flag -ex is now -example.
-    (Mar-18-2007)
-    
-1.15b3
-    - Compiled on Windows with openssl 0.9.7l.
-    - If addresses are specified in a file with -l, do not ask for To. Addresses
-      int he file not not validated howerver.
-
-1.15b2
-    - New flag -ex show examples.
-    - New flag -info to show SMTP server info.
-    - Few bug fixes
-    (Feb-18-2007)
-
-1.15a
-    - Added support for AUTH CRAM-MD5, AUTH PLAIN and AUTH LOGIN
-	autentication.
-    (Feb-17-2007)
-
-    - Added support for AUTH PLAIN
-    (Feb-11-2007)
-
-    - The flag "-a" is changed to "-attach"
-    (Feb-11-2007)
-
-    - The flags "-m" is gone. There is no need for it anymore,  as 
-    attachment type can be changed with i or a with the flag -a. If you 
-    want a "body" text, specify it with -a "file.txt,text/plain,i" as the 
-    first attachment.
-    (Feb-11-2007)
-
-    - STARTTLS support. If the SMTP server supports it, enable it in mailsend
-    with flag "-starttls".
-    (Feb-11-2007)
-
-    (Feb-11-2007)
-
-v1.14
-    - Content-disposition can be changed to attachment or inline.
-    Example: -a "file.gif,image/gif,i". The default is attachment.
-    -a "file.gif,image.gif,a" is same as a "file.gif,image/gif"
-    (Feb-06-2007)
-
-    - Bcc was broken
-    (Nov-03-2006)
-v1.13
-    - If no subject is specified with -sub, it'll be empty. Before
-    the default subject was "hello!"
-    (Jun-25-2006)
-
-    - The flag -M was broken.  Thanks to Amnon S for reporting it.
-    (Jun-25-2006)
-
-    - For text attachments, Content-Disposition was always inline. Now it'll
-    be attachment.  Thanks to Danny Casier.
-    (May-21-2006)
-
-v1.12
-    - mailsend was not adding Date header. Some SMTP servers does not add it
-    either. Now by default it'll add the Date header (make sure your clock
-    is set properly). If you don't want mailsend to add Date header, use the
-    flag +D. Thanks to Mr S J Hannan for the bug report.
-    (May-20-2006)
-
-v 1.11
-    - Attachment seperator character is changed to a , from :. Because in
-    Windows drive is specified with :. Thanks to Jeppe Teglgaard Mohr for
-    pointing it out. Example:  -a "c:\file.gif,image/gif" 
-    (Apr-23-2006)
-
-    - The flag -m is back. This option can be used to attach a text or html
-    file as a blody (inline). Example: -m "file.html,text/html". It is the
-    caller's responsibily to make sure file type is correct. mailsend will
-    not verify if the file is binary or text.
-    (Apr-23-2006)
-
-    - New flag -rrr to request read receipts. Suggested by marc hubaut.
-      (May-14-2006)
-
-    - New flag -rt to add Reply-To header.
-      (May-14-2006)
-
-v 1.10
-   - If the attachment type was text/plain, <CR><LF> was not added after
-     Content-Disposition line which caused attachment to be ignored by
-    some mail readers. 
-    Thanks to Andrés Ghigliazza for pointing it out.
-    (Apr-02-2006)
-
-    - added a new flag -cs to specify the character set for text/plain
-    attachment. The default is us-ascii. But if you need some other
-    type e.g. "ISO-8859-1", you can use this flag.
-    Thanks to Andrés Ghigliazza for the suggestion.
-    (Apr-02-2006)
-
-    - For Cc or Bcc the flags must be at least -cc and -bc
-    (Apr-02-2006)
-
-v1.09
-    - new flag -w to wait for Carriage Return after sending the mail.
-    (Mar-29-2006)
-
-v1.08
-    - remove mailto: from To field. Now the program can be used 
-    (if configured) as the external mailsender from web browsers
-    when clicked on the mailto link.
-    (Mar-26-2006);
-
-v1.07
-    - The flag -m is gone. Any kind of file can be attached with -a.
-
-    - One line message can be attached at the top with -M along with
-    other attachment. Thanks to Smeeta Jalan for the patch.
-
-    - srand() was not called, so the MIME tag was always the same.
-    (Mar-19-2006)
-
-v1.06
-    - The flag -y is gone. Now multiple attachments can be specified 
-    with -a.  Example: -a file.txt:plain/text -a file.gif:image/gif 
-                       -a file.jpg:image/jpeg
-    - new flags +b, +c
-
-    - when stdin is greater than BUFSIZ such that a "." is encountered in 
-    the middle of a line at just the right point there was a bug that 
-    would treat that as a "." at the beginning of the line and stop taking 
-    input. Patch sent by Mike Yang.
-    (Aug-20-2005)
-
-    - qmail compatibily patch sent by Vinicio Montagnoli.
-    (Aug-20-2005)
-
-v1.05
-    - ported to Unix.
-    (Feb-24-2004)
-
-v1.04
-    - Added Content-Disposition: attachment; filename="xyz". So that the
-    name of the attachment shows up in the mail.
-    (Jul-09-2003)
-}}}
+  * The flag -m is gone. Any kind of file can be attached with -a.
+  * One line message can be attached at the top with -M along withY'other attachment. Thanks to Smeeta Jalan for the patch.'
+  * srand() was not called, so the MIME tag was always the same.
+_(Mar-19-2006)_
+=1.06=
+  * The flag -y is gone. Now multiple attachments can be specifiedY'with -a.  Example: -a file.txt:plain/text -a file.gif:image/gif'
+  *a file.jpg:image/jpeg
+  * new flags +b, +c
+  * when stdin is greater than BUFSIZ such that a "." is encountered inY'the middle of a line at just the right point there was a bug that'Y'would treat that as a "." at the beginning of the line and stop taking'Y'input. Patch sent by Mike Yang.'
+_(Aug-20-2005)_
+  * qmail compatibily patch sent by Vinicio Montagnoli.
+_(Aug-20-2005)_
+=1.05=
+  * ported to Unix.
+_(Feb-24-2004)_
+=1.04=
+  * Added Content-Disposition: attachment; filename="xyz". So that theY'name of the attachment shows up in the mail.'
+_(Jul-09-2003)_
