--- a/wiki/mailsendFAQ.wiki
+++ b/wiki/mailsendFAQ.wiki
@@ -101,11 +101,63 @@ Issuer: /C=US/O=Google Inc/CN=Google Internet Authority
 [C] QUIT
 }}}
 ==How to send mail via gmail?==
+
+Ans: Please look at the [examples Examples] section. Look for -ssl and -starttls and -port.
 ==Can this program be used as a mail sender from web browsers?==
+Yes. I'll use the Firefox as an example as I use it. By default on windows Firefox will start outlook express (or nothing) to send mail when you click on a mailto: link. This behavior can be changed as follows:
+
+Go to Control Panel
+Click on Folder Options
+Click on File Types tab
+Click on [NONE] URL:MailTo Protocol
+Click on Advanced button
+Click on open then Click on Edit... button
+Uncheck Use DDE
+In the Application used to perform action field, add the line (without line breaks):
+
+ "C:\path\of\mailsend.exe" -smtp IP_address_of_your_smtp_server
+   -v -d your_domain.com
+   -f you@your_domain.com +cc +bc -v -w -t "%1"
+
+Note: there's no need to clean mailto: tag from another program before calling mailsend.
+
+On Unix, search on the web on how to setup external mail sender for Firefox. Again there's no need to remove mailto: tag from another script.
+
 ==Does the program support ESMTP authentication?==
-==What's the difference between -ssl and-starttls?==
+From v1.15a+, STARTTLS, CRAM-MD5, LOGIN and PLAIN authentication is supported. SMTP over SSL is also supported in v 1.16+. Type mailsend -ex for examples on how to use authentication.
+==What's the difference between -ssl and -starttls?==
+With option -ssl, an encrypted connection is made first and then SMTP protocol continues over the encrypted connection. For example, smtp.gmail.com supports it at port 465. With -starttls, a regular unencrypted connection is made first, then if the server supports STRTTLS, the command is issued to make the connection encrypted. For example smtp. gmail.com supports STARTTLS at port 587.
 ==How to send mail to multiple people?==
+Create a text file containing the addresses and then specify the file with -l. The syntax of the file is as follows:
+{{{
+#####################################################
+# File can contain addresses to send mail to.
+# A line can start with To: email_address,
+# Cc: email_address, BCc: email_address or
+# just a valid email address.
+# Any line that starts with a # or ; is considered a comment
+# and is ignored.
+
+#user@example.com
+To: blah@example.com
+Cc: foo@example.com
+jdoe@example.com
+mjane@example.com
+bar@example.com
+#####################################################
+}}}
+Make sure there is a new line at the end of the last line or the last address will be ignored. Run mailsend with -v to verify that all the addresses are used.
+
 ==Does mailsend verify certificates while making SSL connections?==
+No.
+
 ==Can a text file be attached as a body of the mail?==
+It depends. mailsend supports attachments as inline `-attach "file.txt,text/plain,i"`. Any decent mail reader ( gmail does, ThunderBird does) will display the text file as a body but it is up to the mail reader to do so, mailsend can not do anything about it.
+
 ==I send mail but the mail but it never reaches the destination. What's wrong?==
+   * First of all make sure you can talk to the SMTP server (FAQ#1).
+   * Make sure the mail is accepted by the server (run mailsend with -v).
+   * Make sure that the SMTP server relays message to outside domain or only accepts mail from certain IP addresses (Talk to the admin).
+    * It is also possible the server requires authentication. Type mailsend -ex for examples on how to use authentication. 
 ==What are the valid MIME types?==
+Please look at mime.types. 
