--- a/wiki/Toc.wiki
+++ b/wiki/Toc.wiki
@@ -1,4 +1,4 @@
   * [mailsendFAQ mailsend FAQ]
   * [ChangeLog ChangeLog]
   * [examples Examples]
-  * [mimetypes MIME Types]
+  * [mimetypes !MIME Types]
