--- a/wiki/Toc.wiki
+++ b/wiki/Toc.wiki
@@ -2,3 +2,4 @@
   * [ChangeLog ChangeLog]
   * [examples Examples]
   * [mimetypes MIME Types]
+  * [SiteAdvisor Old blurb about McAfee SiteAdvisor]
