--- a/wiki/SiteAdvisor.wiki
+++ b/wiki/SiteAdvisor.wiki
@@ -4,7 +4,7 @@
 =Old blurb about !McAfee SiteAdvisor=
 I am keeping this document for historical reasons.
 
-Some people reported that some version of McAfee virus scanner detects one of my software mailsend as Gaobot virus. The root of the probelm is McAfee SiteAdvisor. It falsely claiming that mailsend is a virus! They are basically ruining the reputation of my site, which solely exists (more than 12 years) to serve the Internet community with free software I wrote. As yahoo uses McAfee SiteAdvisor software, my site shows up as all red flagged in search. It's a shame yahoo has become so clueless! Apparently it is nothing new, McAfee SiteAdvisor is notorious for flagging sites falsely. Google on it, you will see what I mean.
+Some people reported that some version of ~McAfee virus scanner detects one of my software mailsend as Gaobot virus. The root of the probelm is ~McAfee SiteAdvisor. It falsely claiming that mailsend is a virus! They are basically ruining the reputation of my site, which solely exists (more than 12 years) to serve the Internet community with free software I wrote. As yahoo uses McAfee SiteAdvisor software, my site shows up as all red flagged in search. It's a shame yahoo has become so clueless! Apparently it is nothing new, McAfee SiteAdvisor is notorious for flagging sites falsely. Google on it, you will see what I mean.
 I scanned with Trend Micro PC-cillin v 15.30.1151, and McAfee's very own Viruscan Enterprise 8.0, Other people have reported they scanned with Norton Antivirus, ClamAV 0.94.1/8645, avast! v4.8 Home Edition and found mailsend is clean.
 
 The site: http://www.siteadvisor.com/sites/muquit.com/downloads/6455549/ claims that mailsend modifies registry:
