--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -3,12 +3,12 @@
 #labels Featured
 <wiki:toc />
 =1.17b9=
-  * There was a bug if multiple attachments were specified. The temp file was created only once and was removed. The bug shows up in Windows.
+  * There was a bug if multiple attachments are specified. The temp file was created only once and was removed. The bug shows up in Windows.
   * The flag -l is changed to -list.
-  * A new flag -log is added for logging status messages to a file. It is very alpha at the moment. Use -v to see anything useful.
-_(Mar-06-2013)_
+  * A new flag -log is added for logging status messages to a file. It is very alpha at the moment. User -v to see anything useful. Timestamp the log messages.
+_(Mar-16-2013)_
 =1.17b8=
-  * Pring more error messages.
+  * Print more error messages.
 _(Mar-06-2013)_
 =1.17b7=
   * Print some error message with errno.
@@ -17,7 +17,7 @@ _(Mar-06-2013)_
   * MIME temp file was created on current working directory. Now go through some huristics to determine the path.
 _(Mar-05-2013)_
 =1.17b5=
-  * getaddrinfo() was not found in ws2_32 dll in Windows 2000. included  Wspiapi.h header in msock library as per Microsoft http://support.microsoft.com/kb/955045. Thanks to Bob R for reporting the issue. It is a Windows only change.
+  * getaddrinfo() was not found in ws2_32 dll in Windows 2000. included  Wspiapi.h header in msock library as per Microsoft http://support.microsoft.com/kb/955045. Thanks to Bob R for reporting the issue. It's a Windows only change.
 _(Feb-21-2013)_
 =1.17b4=
   * Added flag -H "header" to add custom headers. For example:
@@ -73,31 +73,35 @@ _(Mar-18-2007)_
   * Few bug fixes
 _(Feb-18-2007)_
 =1.15a=
-  * Added support for AUTH CRAM-MD5, AUTH PLAIN and AUTH LOGIN autentication. Feb-17-2007)
+  * Added support for AUTH CRAM-MD5, AUTH PLAIN and AUTH LOGIN autentication.
+_(Feb-17-2007)_
   * Added support for AUTH PLAIN
 _(Feb-11-2007)_
   * The flag "-a" is changed to "-attach"
 _(Feb-11-2007)_
   * The flags "-m" is gone. There is no need for it anymore,  as attachment type can be changed with i or a with the flag -a. If you want a "body" text, specify it with -a "file.txt,text/plain,i" as the first attachment.
 _(Feb-11-2007)_
-  * STARTTLS support. If the SMTP server supports it, enable it in mailsend with flag "-starttls". Feb-11-2007)
+  * STARTTLS support. If the SMTP server supports it, enable it in mailsend with flag "-starttls".
 _(Feb-11-2007)_
-=1.14=
+
+_(Feb-11-2007)_
+ v1.14
   * Content-disposition can be changed to attachment or inline. Example: -a "file.gif,image/gif,i". The default is attachment.
   *a "file.gif,image.gif,a" is same as a "file.gif,image/gif"
 _(Feb-06-2007)_
   * Bcc was broken
 _(Nov-03-2006)_
-=1.13=
+ v1.13
   * If no subject is specified with -sub, it'll be empty. Before the default subject was "hello!"
 _(Jun-25-2006)_
   * The flag -M was broken.  Thanks to Amnon S for reporting it.
 _(Jun-25-2006)_
-  * For text attachments, Content-Disposition was always inline. Now it'll be attachment.  Thanks to Danny Casier. May-21-2006)=1.12=
-
+  * For text attachments, Content-Disposition was always inline. Now it'll be attachment.  Thanks to Danny Casier.
+_(May-21-2006)_
+ v1.12
   * mailsend was not adding Date header. Some SMTP servers does not add it either. Now by default it'll add the Date header (make sure your clock is set properly). If you don't want mailsend to add Date header, use the flag +D. Thanks to Mr S J Hannan for the bug report.
 _(May-20-2006)_
-=1.11=
+ v 1.11
   * Attachment seperator character is changed to a , from :. Because in Windows drive is specified with :. Thanks to Jeppe Teglgaard Mohr for pointing it out. Example:  -a "c:\file.gif,image/gif"
 _(Apr-23-2006)_
   * The flag -m is back. This option can be used to attach a text or html file as a blody (inline). Example: -m "file.html,text/html". It is the caller's responsibily to make sure file type is correct. mailsend will not verify if the file is binary or text.
@@ -106,24 +110,23 @@ _(Apr-23-2006)_
 _(May-14-2006)_
   * New flag -rt to add Reply-To header.
 _(May-14-2006)_
-=1.10=
+ v 1.10
   * If the attachment type was text/plain, `<CR>``<LF>` was not added after Content-Disposition line which caused attachment to be ignored by some mail readers. Thanks to Andrés Ghigliazza for pointing it out.
 _(Apr-02-2006)_
   * added a new flag -cs to specify the character set for text/plain attachment. The default is us-ascii. But if you need some other type e.g. "ISO-8859-1", you can use this flag. Thanks to Andrés Ghigliazza for the suggestion.
 _(Apr-02-2006)_
   * For Cc or Bcc the flags must be at least -cc and -bc
 _(Apr-02-2006)_
-=1.09=
+ v1.09
   * new flag -w to wait for Carriage Return after sending the mail.
 _(Mar-29-2006)_
-=1.08=
-  * remove mailto: from To field. Now the program can be used (if configured) as the external mailsender from web browsers when clicked on the mailto link. (Mar-26-2006);=1.07=
-
+ v1.08
+  * remove mailto: from To field. Now the program can be used (if configured) as the external mailsender from web browsers when clicked on the mailto link. (Mar-26-2006); v1.07
   * The flag -m is gone. Any kind of file can be attached with -a.
   * One line message can be attached at the top with -M along with other attachment. Thanks to Smeeta Jalan for the patch.
   * srand() was not called, so the MIME tag was always the same.
 _(Mar-19-2006)_
-=1.06=
+ v1.06
   * The flag -y is gone. Now multiple attachments can be specified with -a.  Example: -a file.txt:plain/text -a file.gif:image/gif
   *a file.jpg:image/jpeg
   * new flags +b, +c
@@ -131,11 +134,11 @@ _(Mar-19-2006)_
 _(Aug-20-2005)_
   * qmail compatibily patch sent by Vinicio Montagnoli.
 _(Aug-20-2005)_
-=1.05=
+ v1.05
   * ported to Unix.
 _(Feb-24-2004)_
-=1.04=
+ v1.04
   * Added Content-Disposition: attachment; filename="xyz". So that the name of the attachment shows up in the mail.
 _(Jul-09-2003)_
 ----
-This wiki is auto generated by changelog2wiki.rb on Sun Mar 17 16:42:17 -0400 2013.
+This wiki is auto generated by [https://mailsend.googlecode.com/svn/trunk/changelog2wiki.rb changelog2wiki.rb] on Sun Mar 17 22:35:26 -0400 2013.
