--- a/wiki/mailsendFAQ.wiki
+++ b/wiki/mailsendFAQ.wiki
@@ -4,7 +4,7 @@
 <wiki:toc />
 =mailsend FAQ=
 ==Can an attachment be part of the mail body?==
-Yes. mailsend supports attachments as inline with the option `-attach "file.txt,text/plain,i"`. Any decent mail reader ( gmail does, ThunderBird does) will display the attachment as a body of the mail but it is up to the mail reader to do so. mailsend can not do anything about it.
+It is probably the mostly asked question. mailsend supports attachments as inline with the option `-attach "file.txt,text/plain,i"`. Any decent mail reader (gmail does, !ThunderBird does) will display the attachment as a body of the mail but it is up to the mail reader to do so. mailsend can not do anything about it.
 
 Microsoft Outlook does not support it by design. Please look at the Microsoft Knowledge base article [http://support.microsoft.com/kb/814111] for detail.
 ==How to find out the capabilities of a SMTP server?==
