--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	(Mar-23-2013)
 	- modified Makefile.in to support make -j
 	- fixed several warnings
+	(Apr-27-2013)
 
 1.17b9
 	- There was a bug if multiple attachments were specified. The temp file was
