--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,11 +1,11 @@
 #summary ChangeLog of mailasend
-#sidebar Toc
 #labels Featured
+#sidebar Toc
 <wiki:toc />
 =1.17b10=
   * If there are some kind of socket error, print the error message. If a log file is specified with -log, the error will be written there.
 _(Mar-23-2013)_
-  * modified Makefile.in to support make -j
+  * modified Makefile.in to support make -j. Fixes Issue# 4
   * fixed several warnings
 _(Apr-27-2013)_
 =1.17b9=
@@ -117,9 +117,9 @@ _(May-14-2006)_
   * New flag -rt to add Reply-To header.
 _(May-14-2006)_
 =1.10=
-  * If the attachment type was text/plain, `<CR>``<LF>` was not added after Content-Disposition line which caused attachment to be ignored by some mail readers. Thanks to Andrés Ghigliazza for pointing it out.
+  * If the attachment type was text/plain, `<CR>``<LF>` was not added after Content-Disposition line which caused attachment to be ignored by some mail readers. Thanks to Andrï¿½s Ghigliazza for pointing it out.
 _(Apr-02-2006)_
-  * added a new flag -cs to specify the character set for text/plain attachment. The default is us-ascii. But if you need some other type e.g. "ISO-8859-1", you can use this flag. Thanks to Andrés Ghigliazza for the suggestion.
+  * added a new flag -cs to specify the character set for text/plain attachment. The default is us-ascii. But if you need some other type e.g. "ISO-8859-1", you can use this flag. Thanks to Andrï¿½s Ghigliazza for the suggestion.
 _(Apr-02-2006)_
   * For Cc or Bcc the flags must be at least -cc and -bc
 _(Apr-02-2006)_
