--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,7 +2,7 @@
 	- If there are some kind of socket error, print the error message. If
 	a log file is specified with -log, the error will be written there.
 	(Mar-23-2013)
-	- modified Makefile.in to support make -j
+	- modified Makefile.in to support make -j. Fixes Issue 4.
 	- fixed several warnings
 	(Apr-27-2013)
 
