--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+1.17b100
+	- mailsend writes "Mail sent successfully" message on stdout in
+	interactive mode even if -quiet flag is used. Fixes Issue 6.
+	(May-05-2013)
+
 1.17b10
 	- If there are some kind of socket error, print the error message. If
 	a log file is specified with -log, the error will be written there.
@@ -13,9 +18,9 @@
 	- The flag -l is changed to -list.
 
 	- A new flag -log is added for logging status messages to a file. 
-    It is very alpha at the moment. User -v to see anything useful. The log
-    messages are time stamped.
-    (Mar-16-2013)
+	It is very alpha at the moment. User -v to see anything useful. The log
+	messages are time stamped.
+	(Mar-16-2013)
 
 1.17b8
 	- Print more error messages.
@@ -25,9 +30,9 @@
 	(Mar-06-2013)
 
 1.17b6
-    - MIME temp file was created on current working directory. Now go through some
-    huristics to determine the path.
-    (Mar-05-2013)
+	- MIME temp file was created on current working directory. Now go through some
+	huristics to determine the path.
+	(Mar-05-2013)
 1.17b5
 	- getaddrinfo() was not found in ws2_32 dll in Windows 2000.
 	included  Wspiapi.h header in msock library as per Microsoft
@@ -41,8 +46,8 @@
 	(Feb-12-2013)
 
 1.17b3
-    - Individual auth flags were not working.
-    (Jan-21-2013)
+	- Individual auth flags were not working.
+	(Jan-21-2013)
 
 1.17b2
 	- IPv6 address was printed wrong.
