--- a/doc/mailsend.1
+++ b/doc/mailsend.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "MAILSEND 1"
-.TH MAILSEND 1 "2013-05-05" "mailsend 1.17b11" "User Commands"
+.TH MAILSEND 1 "2013-06-16" "mailsend 1.17b12" "User Commands"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -134,11 +134,11 @@ mailsend \- A command line program to send mail via SMTP protocol
 .SH "SYNOPSYS"
 .IX Header "SYNOPSYS"
 .Vb 1
-\& Version: @(#) mailsend v1.17b11
+\& Version: @(#) mailsend v1.17b12
 \&
 \& Copyright: GNU GPL. It is illegal to use this software for Spamming
 \&
-\& (OpenSSL version: OpenSSL 1.0.0g 18 Jan 2012)
+\& (OpenSSL version: OpenSSL 1.0.0e 6 Sep 2011)
 \& usage: mailsend [options]
 \& Where the options are:
 \&  \-smtp hostname/IP*    \- Hostname/IP address of the SMTP server
@@ -162,6 +162,7 @@ mailsend \- A command line program to send mail via SMTP protocol
 \&  \-M    "one line msg"  \- attach this one line text message
 \&  \-name "Full Name"     \- add name in the From header
 \&  \-v                    \- verbose mode
+\&  \-show_attach          \- show attachment in verbose mode, default is no
 \&  \-V                    \- show version info
 \&  \-w                    \- wait for a CR after sending the mail
 \&  \-rt  email_address    \- add Reply\-To header
