--- a/doc/mailsend.1
+++ b/doc/mailsend.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "MAILSEND 1"
-.TH MAILSEND 1 "2013-10-12" "mailsend 1.17b13" "User Commands"
+.TH MAILSEND 1 "2013-10-19" "mailsend 1.17b13" "User Commands"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -136,11 +136,12 @@ mailsend \- A command line program to send mail via SMTP protocol
 .Vb 1
 \& Version: @(#) mailsend v1.17b13
 \&
-\& Copyright: GNU GPL. It is illegal to use this software for Spamming
+\& Copyright: BSD. It is illegal to use this software for Spamming
 \&
-\& (OpenSSL version: OpenSSL 0.9.8y 5 Feb 2013)
+\& (Compiled with OpenSSL version: OpenSSL 0.9.8y 5 Feb 2013)
 \& usage: mailsend [options]
 \& Where the options are:
+\&  \-copyright            \- show copyright information
 \&  \-smtp hostname/IP*    \- Hostname/IP address of the SMTP server
 \&  \-port SMTP port       \- SMTP port
 \&  \-d    domain          \- domain name for SMTP HELO/EHLO
@@ -253,7 +254,7 @@ Please look at the web page for latest version and documentation:
 <http://muquit.com/muquit/software/mailsend/mailsend.html>
 .SH "LICENSE"
 .IX Header "LICENSE"
-\&\s-1GNU\s0 \s-1GPL\s0
+\&\s-1BSD\s0
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 mailsend is written by Muhammad Muquit <muquit@muquit.com>.
