--- a/doc/mailsend.pod
+++ b/doc/mailsend.pod
@@ -5,11 +5,11 @@ mailsend - A command line program to send mail via SMTP protocol
 =head1 SYNOPSYS
 
 
- Version: @(#) mailsend v1.17b13
+ Version: @(#) mailsend v1.17b14
 
  Copyright: BSD. It is illegal to use this software for Spamming
 
- (Compiled with OpenSSL version: OpenSSL 0.9.8y 5 Feb 2013)
+ (Compiled with OpenSSL version: OpenSSL 1.0.0g 18 Jan 2012)
  usage: mailsend [options]
  Where the options are:
   -copyright            - show copyright information
@@ -17,10 +17,10 @@ mailsend - A command line program to send mail via SMTP protocol
   -port SMTP port       - SMTP port
   -d    domain          - domain name for SMTP HELO/EHLO
   -t    to,to..*        - email address/es of the recipient/s
-  -cc   cc,cc..         - Carbon copy address/es
+  -cc   cc,cc..         - carbon copy address/es
   +cc                   - do not ask for Carbon Copy
   -ct   seconds         - Connect timeout. Default is 5 seconds
-  -bc   bcc,bcc..       - Blind carbon copy address/es
+  -bc   bcc,bcc..       - blind carbon copy address/es
   +bc                   - do not ask for Blind carbon copy
   +D                    - don not add Date header
   -f    address*        - email address of the sender
@@ -41,8 +41,8 @@ mailsend - A command line program to send mail via SMTP protocol
   -rt  email_address    - add Reply-To header
   -rrr email_address    - request read receipts to this address
   -ssl                  - SMTP over SSL
-  -starttls             - Check for STARTTLS and if server supports, do it
-  -auth                 - Try CRAM-MD5,LOGIN,PLAIN in that order
+  -starttls             - use STARTTLS if the server supports it
+  -auth                 - try CRAM-MD5,LOGIN,PLAIN in that order
   -auth-cram-md5        - use AUTH CRAM-MD5 authentication
   -auth-plain           - use AUTH PLAIN authentication
   -auth-login           - use AUTH LOGIN authentication
@@ -130,7 +130,32 @@ L<http://muquit.com/muquit/software/mailsend/mailsend.html>
 
 =head1 LICENSE
 
-BSD
+Copyright (C) 2003-2013  Muhammad Muquit (http://www.muquit.com/)
+
+ o Redistributions of source code must retain the above copyright notice, 
+this list of conditions and the following disclaimer.
+
+ o Redistributions in binary form must reproduce the above copyright notice, 
+this list of conditions and the following disclaimer in the documentation 
+and/or other materials provided with the distribution.
+
+ o Neither the name of the author MUHAMMAD MUQUIT (http://www.muquit.com/)
+nor the names of its contributors may be used to endorse or promote 
+products derived from this software without specific prior written 
+permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" 
+AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE 
+IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE 
+ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE 
+LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR 
+CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF 
+SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
+INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN 
+CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) 
+ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE 
+POSSIBILITY OF SUCH DAMAGE.
+
 
 =head1 AUTHOR
 
